--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -69,7 +69,7 @@
   </ul>
 </app-header>
 <div class="app-body">
-  <app-sidebar [fixed]="true" [display]="'lg'">
+  <app-sidebar [fixed]="true" [display]="'md'">
     <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] ></app-sidebar-nav>
   </app-sidebar>
   <!-- Main content -->
