--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@
 $body-bg:    #FFFF;
 $body-color:  	#212649;
 $font-size-base: 1rem;
+$sidebar-width: 100px;
 
 // Breadcrumb
 $breadcrumb-active-color: #D00A2A;
@@ -48,6 +49,6 @@ $theme-colors:(
     succes: #0AA010,
     info: #18EDED,
     warning: #E2DA0C,
-    danger: #CD0428,
-    link:#212649
+    danger: #CB1630,
+    link:#183964
 );
