--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8,7 +8,7 @@
     color: #FFF;
 }
 .app-header .navbar-brand {
-    width: 200px;
+    width: 150px;
     height: 55px;
 }
 .header-fixed .app-header {
@@ -23,14 +23,18 @@
 .sidebar{
     background-color: #212649;
     z-index: 1020;
+    width: 100px !important;
 }
 .sidebar-fixed .sidebar {
     z-index: 1020;
+    width: 100px;
 }
 .sidebar .nav-link {
     display: flow-root;
-    padding: 1.25rem 3.25rem;
+    padding: 0.5rem 0.25rem;
     text-align: center;
+    width: 100px;
+    font-size: 0.75rem;
 }
 .sidebar .nav-link.active{
     color: #ffffff;
@@ -42,8 +46,9 @@
 }
 .sidebar .nav-link .nav-icon {
     display: flow-root;
-    font-size: 2rem;
-    width: 5.25rem;
+    font-size: 1.5rem;
+    width: 3.25rem;
+    margin: 0 0 0 1.25rem;
 }
 .sidebar .nav-link.active .nav-icon {
     color: #ffffff;
