--- a/src/app/aaacesa/previos/previos.component.scss
+++ b/src/app/aaacesa/previos/previos.component.scss
@@ -206,3 +206,15 @@ table{
     background-color: #e0e2ff !important;
     border-bottom: 1px solid #0c0d1a;
 }
+
+.linebl{
+    background: #191c37;
+    width: 35%;
+    height: 5%;
+    margin-top: 9%;
+    margin-left: -15%;
+}
+
+.ctrfrsw{
+    margin-top: -0.848%;
+}
