--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -1,3 +1,74 @@
-<p>
-  salidas works!
-</p>
+<div class="container">
+  <div class="row justify-content-end">
+    <div class="col-lg-6 col-md-6 col-xs-6 text-right">
+      <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Salida</button>
+    </div>
+  </div>
+</div>
+<div class="animated fadeIn">
+  <div class="card">
+    <div class="card-body">
+      <div class="row mb-3">
+        <div class="col-md-4 offset-md-8">
+          <mat-form-field class="input-full-width">
+            <input matInput (keyup)="applyFilter($event.target.value)" type="text" class="form-control" placeholder="Buscar..." />
+            <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+          <!-- Master Column -->
+          <ng-container matColumnDef="Master">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Master </th>
+            <td mat-cell *matCellDef="let element"> {{element.Master}} </td>
+          </ng-container>
+
+          <!-- House Column -->
+          <ng-container matColumnDef="House">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+            <td mat-cell *matCellDef="let element"> {{element.House}} </td>
+          </ng-container>
+
+          <!-- Pedimento Column -->
+          <ng-container matColumnDef="Pedimento">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Pedimento </th>
+            <td mat-cell *matCellDef="let element"> {{element.Pedimento}} </td>
+          </ng-container>
+
+          <!-- RFC Column -->
+          <ng-container matColumnDef="RFC">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC </th>
+            <td mat-cell *matCellDef="let element"> {{element.RFCFacturar}} </td>
+          </ng-container>
+
+          <!-- Fecha Column -->
+          <ng-container matColumnDef="Fecha">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let element"> {{element.FechaCreacion}} </td>
+          </ng-container>
+
+          <!-- Estatus Column -->
+          <ng-container matColumnDef="Estatus">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
+            <td mat-cell *matCellDef="let element"> {{element.Estatus}} </td>
+          </ng-container>
+
+          <!-- Acciones Column -->
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-link btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a> </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [length]="100"
+                       [pageSize]="10"
+                       [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
