Previos Integracion  Catalogo Estatus  VerDetalle  GetDocumnto

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -194,6 +194,9 @@ table{
         &--Finalizada{
             background-color: #596df2;
         }
+        &--Cancelada{
+            background-color: #ff0000;
+        }
     }
 }
 
