--- a/src/app/aaacesa/previos/previos.component.scss
+++ b/src/app/aaacesa/previos/previos.component.scss
@@ -88,6 +88,9 @@ table{
     //TODO change to var $color-primary
     color: #FB600A;
 }
+.u-border-none {
+    border: none;
+}
 
 
 // Font size fixes
@@ -175,6 +178,9 @@ table{
         &--Finalizada{
             background-color: #596df2;
         }
+        &--Cancelada{
+            background-color: #ff0000;
+        }
     }
 }
 
@@ -202,7 +208,7 @@ table{
     border-top: 1px solid #0c0d1a;
 }
 
-.mat-expansion-panel-header, .mat-expansion-panel-header.mat-expanded ,.mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
-    background-color: #e0e2ff !important;
-    border-bottom: 1px solid #0c0d1a;
-}
+// .mat-expansion-panel-header, .mat-expansion-panel-header.mat-expanded ,.mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
+//     background-color: #e0e2ff !important;
+//     border-bottom: 1px solid #0c0d1a;
+// }
