--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,12 +20,12 @@ $modal-footer-border-color: #FFFF;
 //Forms
 $input-bg: transparent;
 $input-color: #191C37;
-$input-border-color: #646880;
-$input-border-radius: 15px;
+// $input-border-color: #646880;
+// $input-border-radius: 15px;
 $input-placeholder-color: #646880;
 $input-focus-border-color:#B2B3C0;
 $input-focus-box-shadow: #B2B3C0;
-$input-disabled-bg: #646880;
+ $input-disabled-bg: transparent;
 $input-group-addon-bg: transparent;
 $input-group-addon-color:#646880;
 
