--- a/src/app/aaacesa/abandono/abandono.component.html
+++ b/src/app/aaacesa/abandono/abandono.component.html
@@ -1,96 +1,71 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
-
 <div class="animated fadeIn">
   <div class="card">
-    <!-- <div class="card-header">    
-      <div class="row justify-content-end">  
-        <div class="col-lg-2">
-          <button class="btn btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>
-        </div>          
-      </div>      
-    </div> -->
-
     <div class="card-body">
       <div class="row mb-3">
-        <div class="col-lg-10 mb-1">
-          <div class="row">
-            <div class="col-lg-3 mb-1">
-              <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía Master"/>
-            </div>
-            <div class="col-lg-3 mb-1">
-              <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía House"/>
-            </div>
-
-            <div class="col-lg-4 mb-1">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                </div>
-                <input class="form-control" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="bsRangeValue" placeholder="Rango de Fecha">
-              </div>
-            </div>            
-
-          </div>
-        </div>
-
-        <div class="col-lg-2">
-          <button class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
-        </div>
       </div>
-
-
-      <!-- <table class="table table-striped" [mfData]="data | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="10"> -->
-      <table class="table table-striped" [mfData]="filterData" #mf="mfDataTable" [mfRowsOnPage]="10">
-        <thead>
-            <tr>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="masterguide">Guía Master <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="houseguide">Guía House <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="npieces">No. de piezas <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="weight">Peso <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="status">Estatus <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-                <th class="text-center" style="width: 20%">
-                  <mfDefaultSorter by="leftDate">Fecha de abandono <i class="iconfilt material-icons u-small-text">filter_list</i> </mfDefaultSorter>
-                </th>
-              </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of mf.data">
-            <!-- <td>{{item.name}}</td>
-            <td>{{item.email}}</td>
-            <td class="text-right">{{item.age}}</td>
-            <td>{{item.city | uppercase}}</td> -->
-            <!-- <div class="col status-filter">            
-              <div class="status-filter__circle"></div>
-                <div class="status-filter__text">
-                  <p><span class="status-filter__number">1</span> P.AAACESA </p>
-                </div>
-            </div> -->
-            <td class="text-center">{{item.masterguide}}</td>
-            <td class="text-center">{{item.houseguide}}</td>
-            <td class="text-center">{{item.npieces}}</td>
-            <td class="text-center">{{item.weight}}</td>
-            <td class="text-center">{{item.status}}</td>
-            <td class="text-center">{{item.leftDate | date: 'dd/MM/yy' }}</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td colspan="6">
-              <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
+      <mat-tab-group>
+        <mat-tab label="Notificaciones">  
+            <div class="table-responsive">
+              <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      
+                <!-- Nombre Column -->
+                <ng-container matColumnDef="nombre">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Nombre}} {{element.Paterno}} {{element.Materno}} </td>
+                </ng-container>
+      
+                <!-- Telefono Column -->
+                <ng-container matColumnDef="telefono">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Teléfono </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Telefono}} </td>
+                </ng-container>
+      
+                <!-- RFC Column -->
+                <ng-container matColumnDef="rfc">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC </th>
+                  <td mat-cell *matCellDef="let element"> {{element.RFC}} </td>
+                </ng-container>
+      
+                <!-- Patente Column -->
+                <ng-container matColumnDef="patente">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Patente </th>
+                  <td mat-cell *matCellDef="let element"> {{element.ClavePatente}} </td>
+                </ng-container>
+      
+                <!-- Perfil Column -->
+                <ng-container matColumnDef="perfil">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Perfil </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Perfil.ClavePerfil}} </td>
+                </ng-container>
+      
+                <!-- Activo Column -->
+                <ng-container matColumnDef="activo">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
+                  <td mat-cell *matCellDef="let element">
+                    <label class="switch switch-label switch-pill switch-outline-secondary" style="padding-top:8px;">
+                      <input type="checkbox" class="switch-input" [checked]="element.IsBlocked">
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
+                    </label>
+                  </td>
+                </ng-container>
+      
+                <!-- Acciones Column -->
+                <ng-container matColumnDef="acciones">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+                  <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-link btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a> </td>
+                </ng-container>
+      
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+              <mat-paginator [length]="100"
+                              [pageSize]="10"
+                              [pageSizeOptions]="[5, 10, 25, 100]">
+              </mat-paginator>
+            </div>
+        </mat-tab>
+        <mat-tab label="Pre Notificacione"> </mat-tab>
+      </mat-tab-group>
     </div>
   </div>
 </div>
