--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-bottom:10px;">
   <div class="row justify-content-end">
     <div class="col-lg-6 col-md-6 col-xs-6 text-right">
       <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Salida</button>
