--- a/src/app/aaacesa/previos/previos.component.scss
+++ b/src/app/aaacesa/previos/previos.component.scss
@@ -208,10 +208,10 @@ table{
     border-top: 1px solid #0c0d1a;
 }
 
-.mat-expansion-panel-header, .mat-expansion-panel-header.mat-expanded ,.mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
-    background-color: #e0e2ff !important;
-    border-bottom: 1px solid #0c0d1a;
-}
+// .mat-expansion-panel-header, .mat-expansion-panel-header.mat-expanded ,.mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
+//     background-color: #e0e2ff !important;
+//     border-bottom: 1px solid #0c0d1a;
+// }
 
 .linebl{
     background: #191c37;
