--- a/src/app/aaacesa/abandono/abandono.component.html
+++ b/src/app/aaacesa/abandono/abandono.component.html
@@ -2,69 +2,100 @@
   <div class="card">
     <div class="card-body">
       <div class="row mb-3">
+        <div class="col-md-4 offset-md-8">
+          <mat-form-field class="input-full-width">
+            <input matInput [(ngModel)]="filterQuery" type="text" placeholder="Buscar..." />
+            <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
+          </mat-form-field>
+        </div>
       </div>
-      <mat-tab-group>
-        <mat-tab label="Notificaciones">  
-            <div class="table-responsive">
-              <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-      
-                <!-- Nombre Column -->
-                <ng-container matColumnDef="nombre">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Nombre}} {{element.Paterno}} {{element.Materno}} </td>
-                </ng-container>
-      
-                <!-- Telefono Column -->
-                <ng-container matColumnDef="telefono">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Teléfono </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Telefono}} </td>
-                </ng-container>
-      
-                <!-- RFC Column -->
-                <ng-container matColumnDef="rfc">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC </th>
-                  <td mat-cell *matCellDef="let element"> {{element.RFC}} </td>
-                </ng-container>
-      
-                <!-- Patente Column -->
-                <ng-container matColumnDef="patente">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Patente </th>
-                  <td mat-cell *matCellDef="let element"> {{element.ClavePatente}} </td>
-                </ng-container>
-      
-                <!-- Perfil Column -->
-                <ng-container matColumnDef="perfil">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Perfil </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Perfil.ClavePerfil}} </td>
-                </ng-container>
-      
-                <!-- Activo Column -->
-                <ng-container matColumnDef="activo">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
-                  <td mat-cell *matCellDef="let element">
-                    <label class="switch switch-label switch-pill switch-outline-secondary" style="padding-top:8px;">
-                      <input type="checkbox" class="switch-input" [checked]="element.IsBlocked">
-                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
-                    </label>
-                  </td>
-                </ng-container>
-      
-                <!-- Acciones Column -->
-                <ng-container matColumnDef="acciones">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
-                  <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-link btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a> </td>
-                </ng-container>
-      
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator [length]="100"
-                              [pageSize]="10"
-                              [pageSizeOptions]="[5, 10, 25, 100]">
-              </mat-paginator>
-            </div>
+      <mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)" >
+        <mat-tab label="Pre Notificaciones"> 
+          <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource.data | dataFilter : filterQuery" matSort class="mat-elevation-z8">
+    
+              <!-- Nombre Column -->
+              <ng-container matColumnDef="Master">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Master </th>
+                <td mat-cell *matCellDef="let element"> {{element.Master}}</td>
+              </ng-container>
+    
+              <!-- House Column -->
+              <ng-container matColumnDef="House">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+                <td mat-cell *matCellDef="let element"> {{element.House }} </td>
+              </ng-container>
+    
+              <!-- Piezas Column -->
+              <ng-container matColumnDef="Piezas">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Piezas </th>
+                <td mat-cell *matCellDef="let element"> {{element.Piezas}} </td>
+              </ng-container>
+    
+              <!-- Peso Column -->
+              <ng-container matColumnDef="Peso">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Peso </th>
+                <td mat-cell *matCellDef="let element"> {{element.Peso}} </td>
+              </ng-container>
+    
+              <!-- FechaAbandono Column -->
+              <ng-container matColumnDef="FechaAbandono">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> FechaAbandono </th>
+                <td mat-cell *matCellDef="let element"> {{element.FechaAbandono}} </td>
+              </ng-container>
+    
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="100"
+                            [pageSize]="5"
+                            [pageSizeOptions]="[5, 10, 25, 100]">
+            </mat-paginator>
+          </div>
         </mat-tab>
-        <mat-tab label="Pre Notificacione"> </mat-tab>
+        <mat-tab label="Notificaciones">  
+          <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource.data | dataFilter : filterQuery" matSort class="mat-elevation-z8">
+    
+              <!-- Nombre Column -->
+              <ng-container matColumnDef="Master">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Master </th>
+                <td mat-cell *matCellDef="let element"> {{element.Master}}</td>
+              </ng-container>
+    
+              <!-- House Column -->
+              <ng-container matColumnDef="House">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+                <td mat-cell *matCellDef="let element"> {{element.House }} </td>
+              </ng-container>
+    
+              <!-- Piezas Column -->
+              <ng-container matColumnDef="Piezas">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Piezas </th>
+                <td mat-cell *matCellDef="let element"> {{element.Piezas}} </td>
+              </ng-container>
+    
+              <!-- Peso Column -->
+              <ng-container matColumnDef="Peso">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Peso </th>
+                <td mat-cell *matCellDef="let element"> {{element.Peso}} </td>
+              </ng-container>
+    
+              <!-- FechaAbandono Column -->
+              <ng-container matColumnDef="FechaAbandono">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> FechaAbandono </th>
+                <td mat-cell *matCellDef="let element"> {{element.FechaAbandono}} </td>
+              </ng-container>
+    
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="100"
+                            [pageSize]="5"
+                            [pageSizeOptions]="[5, 10, 25, 100]">
+            </mat-paginator>
+          </div>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
