--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -8,6 +8,65 @@
 <div class="animated fadeIn">
   <div class="card">
     <div class="card-body">
+
+      <div class="row mb-3">
+        <div class="col-lg-10 mb-1">
+          <div class="row">
+            <div class="col-lg-3 mb-1">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Guía Master" />
+              </mat-form-field>
+            </div>
+            <div class="col-lg-3 mb-1">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Guía House" />
+              </mat-form-field>
+            </div>
+            <div class="col-lg-3 mb-1">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="ID Adelanto Salida" />
+              </mat-form-field>
+            </div>
+            <div class="col-lg-3 mb-1">
+              <div class="input-group">
+                <mat-form-field class="input-full-width">
+                  <input matInput class="" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="bsRangeValue" placeholder="Rango de Fecha">
+                  <!-- <mat-icon matSuffix>date_range</mat-icon> -->
+                </mat-form-field>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <button class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-lg-10">
+          <div class="row">
+            <div class="col-lg-3 mb-1">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Referencia" />
+              </mat-form-field>
+            </div>
+            <div class="col-lg-3 mb-1">
+              <mat-form-field class="input-full-width">
+                <mat-select class="" placeholder="Estatus" #singleSelect>
+                  <mat-option>
+                    <ngx-mat-select-search [(ngModel)]="estatusSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                  </mat-option>
+                  <mat-option>Ninguno</mat-option>
+                  <mat-option *ngFor="let option of estatusCatalogo | filterSelect: estatusSearch" [value]="option.IdEstatus">
+                    {{option.Descripcion}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="row mb-3">
         <div class="col-md-4 offset-md-8">
           <mat-form-field class="input-full-width">
@@ -38,13 +97,13 @@
           </ng-container>
 
           <!-- RFC Column -->
-          <ng-container matColumnDef="RFC">
+          <ng-container matColumnDef="RFCFacturar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC </th>
             <td mat-cell *matCellDef="let element"> {{element.RFCFacturar}} </td>
           </ng-container>
 
           <!-- Fecha Column -->
-          <ng-container matColumnDef="Fecha">
+          <ng-container matColumnDef="FechaCreacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
             <td mat-cell *matCellDef="let element"> {{element.FechaCreacion}} </td>
           </ng-container>
@@ -64,10 +123,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [length]="100"
-                       [pageSize]="10"
-                       [pageSizeOptions]="[5, 10, 25, 100]">
-        </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20, 100]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
   </div>
