--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -96,78 +96,80 @@
           </div>
         </div>
       </div>
+<!-- Start Status Filter Bar -->
+<div class="row mt-5 mb-3">
+    <div class="col-lg-10 offset-lg-1">
+      <div class="row">
 
-      <div class="row mt-5 mb-3">
-        <div class="col-lg-10 offset-lg-1">
-          <div class="row">
-
-            <div class="col status-filter">
-              <div class="status-filter__circle status-filter__circle--Aceptada"></div>
-              <div class="status-filter__text">
-                <label (click)="applyFilter(0)">
-                  <p><span class="status-filter__number">{{ countStatus.Aceptada }}</span> Aceptada </p>
-                </label>
-              </div>
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--Aceptada"></div>
+            <div class="status-filter__text">
+              <label (click)="applyFilter(0)">
+                <p><span class="status-filter__number">{{ countStatus.Aceptada }}</span> Aceptada </p>
+              </label>
             </div>
-
-            <div class="col status-filter">
-              <div class="status-filter__circle status-filter__circle--Solicitada"></div>
-              <div class="status-filter__text">
-                <label (click)="applyFilter(1)">
-                  <p><span class="status-filter__number">{{ countStatus.Solicitada }}</span> Solicitada </p>
-                </label>
-              </div>
+        </div> 
+        
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--Solicitada"></div>
+            <div class="status-filter__text">
+              <label (click)="applyFilter(1)">
+                <p><span class="status-filter__number">{{ countStatus.Solicitada }}</span> Solicitada </p>
+              </label>
             </div>
-
-            <div class="col status-filter">
-              <div class="status-filter__circle status-filter__circle--PAAACESA"></div>
-              <div class="status-filter__text">
-                <label (click)="applyFilter(2)">
-                  <p><span class="status-filter__number">{{ countStatus.PAAACESA }}</span> P.AAACESA </p>
-                </label>
-              </div>
-            </div>
-
-            <div class="col status-filter">
-              <div class="status-filter__circle status-filter__circle--PCliente"></div>
-              <div class="status-filter__text">
-                <label (click)="applyFilter(3)">
-                  <p><span class="status-filter__number">{{ countStatus.PCliente }}</span> P.Cliente </p>
-                </label>
-              </div>
-  
-              <div class="col status-filter">            
-                <div class="status-filter__circle status-filter__circle--Finalizada"></div>
-                <div class="status-filter__text">
-                  <label (click)="applyFilter(5)">
-                    <p><span class="status-filter__number">{{ countStatus.Finalizada }}</span> Finalizada </p>
-                  </label>
-                </div>                
-              </div>
-  
-              <div class="col status-filter">                          
-                <div class="status-filter__text">
-                  <label (click)="applyFilter(10)">
-                    <p><span class="status-filter__number">{{data.length}}</span> Todos </p>
-                  </label>
-                </div>                
-              </div>
-              <!-- <input style="display: none;" id="finalizadaCheck" #finalizadaCheck class="status-filter__check" type="checkbox">               -->
-              <!-- {{ filterStatus.Finalizada }} -->
-            </div>
-
-            <div class="col status-filter">
-              <div class="status-filter__text">
-                <label (click)="applyFilter(10)" for="todosCheck">
-                  <p><span class="status-filter__number">{{data.length}}</span> Todos </p>
-                </label>
-              </div>
-              <!-- <input id="todosCheck" class="status-filter__check" type="checkbox"> -->
-            </div>
-
-          </div>
         </div>
-          
+
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--PAAACESA"></div>
+            <div class="status-filter__text">
+              <label (click)="applyFilter(2)">
+                <p><span class="status-filter__number">{{ countStatus.PAAACESA }}</span> P.AAACESA </p>
+              </label>
+            </div>
+        </div>
+
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--PCliente"></div>
+            <div class="status-filter__text">
+              <label (click)="applyFilter(3)">
+                <p><span class="status-filter__number">{{ countStatus.PCliente }}</span> P.Cliente </p>
+              </label>
+            </div>
+        </div>
+        
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--Rechazada"></div>
+            <div class="status-filter__text">
+              <label (click)="applyFilter(4)">
+                <p><span class="status-filter__number">{{ countStatus.Rechazada }}</span> Rechazada </p>
+              </label>
+            </div>
+        </div>
+
+        <div class="col status-filter">            
+          <div class="status-filter__circle status-filter__circle--Finalizada"></div>
+          <div class="status-filter__text">
+            <label (click)="applyFilter(5)" for="finalizadaCheck">
+              <p><span class="status-filter__number">{{ countStatus.Finalizada }}</span> Finalizada </p>
+            </label>
+          </div>
+          <!-- <input style="display: none;" id="finalizadaCheck" #finalizadaCheck class="status-filter__check" type="checkbox">               -->
+          <!-- {{ filterStatus.Finalizada }} -->
+        </div>
+
+        <div class="col status-filter">                          
+          <div class="status-filter__text">
+            <label (click)="applyFilter(10)" for="todosCheck">
+              <p><span class="status-filter__number">{{data.length}}</span> Todos </p>
+            </label>
+          </div>              
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- End Status Filter Bar -->
+                 
         
         <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">                                   
@@ -232,7 +234,7 @@
           <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>  
 
-      </div>
+      
     </div>
   </div>
   
@@ -247,67 +249,43 @@
               </button>
             </div>
             <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-6 col-md-12 col-lg-12">
-                  <div class="row">
+                <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="form-group">            
-                        <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía Master"/>
-                      </div>
+                        <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Referencia"/>
+                      </div>                      
                     </div>
-                    <div class="col-sm-6 col-md-6 col-lg-6">                      
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                       <div class="form-group">            
+                         <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía Master"/>
+                       </div>                      
                       <div class="form-group">            
                         <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía House"/>
                       </div>      
                     </div>
-                  </div>
-                  <div class="row">
+                </div>
+                <div class="row">
                     <div class="col">
-                        <div class="form-group">  
-                            <div class="row justify-content-center"> 
-                                <h1 style="font-size: 2rem"><i class="fas fa-plane-departure"></i></h1>
-                            </div>
-                            <div class="row justify-content-center">
-                                <button (click)="myModal2.show(); myModal.hide();" class="btn btn-pill btn-primary">Siguiente</button>
-                            </div>
+                      <div class="form-group">
+                        <div class="row justify-content-center">
+                          <div class="col" style="text-align: right; transform: translateX(-6%);">
+                            <h1 style="font-size: 2rem"><i class="fas fa-plane-departure"></i></h1>
+                          </div>
+                          <div class="col" style="text-align: left; transform: translateX(-1%);">
+                            <div class="linebl"></div>
+                          </div>
                         </div>
+                        <div class="row justify-content-center">
+                          <button (click)="myModal2.show(); myModal.hide();"
+                            class="btn btn-pill btn-primary">Siguiente</button>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía Master" />
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía House" />
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <div class="form-group">
-                  <div class="row justify-content-center">
-                    <div class="col" style="text-align: right; transform: translateX(-6%);">
-                      <h1 style="font-size: 2rem"><i class="fas fa-plane-departure"></i></h1>
-                    </div>
-                    <div class="col" style="text-align: left; transform: translateX(-1%);">
-                      <div class="linebl"></div>
-                    </div>
-                  </div>
-                  <div class="row justify-content-center">
-                    <button (click)="myModal2.show(); myModal.hide();"
-                      class="btn btn-pill btn-primary">Siguiente</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- /.modal-body -->
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+            </div><!-- /.modal-body -->
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
 
 
 <div bsModal #myModal2="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModal2Label"
@@ -511,9 +489,11 @@
                 </div>
               </div>                        
             </div>         
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
+        </div>         
+      </div><!-- /.modal-body --> 
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
   
     <!-- Modal Detalle -->
       <div bsModal #detalleModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="detalleModalLabel" aria-hidden="true">
@@ -805,10 +785,8 @@
               </div>
             </div>
 
-          </div>
-        </div>
-      </div><!-- /.modal-body -->
-    </div><!-- /.modal-content -->
+          </div><!-- /.modal-body -->
+        </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
